# MPRPC

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.h  friend.proto  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcchannel.h  mprpcprovider.h  rpcheader.pb.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcheader.proto  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpcconfig.h  mprpccontroller.h
test/protobuf/: a.out  main.cc  test.pb.h  test.proto
